<resources>
    <string name="app_name">Foods App</string>
    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="banner_ads_id">ca-app-pub-7622707640153634/8903034875</string>
    <string name="interstitial_ads_id">ca-app-pub-7622707640153634/9090737130</string>
    <string name="interstitial_video_ads_id">ca-app-pub-7622707640153634/9554126783</string>
    <string name="home">Home</string>
    <string name="recipes">My Recipes</string>
    <string name="cook">Cook Now</string>
    <string name="contact">Contact Us</string>
    <string name="email">Email</string>
    <string name="type_email"> type email</string>
    <string name="password">Password</string>
    <string name="type_password"> type password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
