<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="Home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/action_recipes"
        android:title="@string/recipes"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_re"
        />
    <item
        android:id="@+id/action_cook"
        android:title="@string/cook"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cook"
        />
    <item
        android:id="@+id/action_contact"
        android:title="@string/contact"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_contact"
        />


</menu>